--- a/config/database.yml
+++ b/config/database.yml
@@ -15,15 +15,18 @@
 # gem 'pg'
 #
 default: &default
-  adapter: postgresql
-  encoding: unicode
+  adapter: mysql2
+  encoding: utf-8
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
-
+  socket: /var/lib/mysql/mysql.sock
+  
 development:
   <<: *default
   database: example_development
+  username: user_development
+  password: 0000
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -58,6 +61,8 @@ development:
 test:
   <<: *default
   database: example_test
+  username: user_test
+  password: 0000
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,5 +86,5 @@ test:
 production:
   <<: *default
   database: example_production
-  username: example
-  password: <%= ENV['EXAMPLE_DATABASE_PASSWORD'] %>
+  username: user_production
+  password: 0000
